# MidiPortal

./: CMakeLists.txt  helloworld.cpp  helloworld.hpp  main.cpp
cmake/: FindCabl.cmake  FindRtMidi.cmake
